--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "server": "json-server ./server/db.json --port 3001"
   },
   "devDependencies": {
+    "json-server": "^0.17.4",
     "vite": "^6.3.5"
-  },
-  "dependencies": {
-    "json-server": "^1.0.0-beta.3"
   }
 }
